# ESE224-Final-Project

./: .gitignore  README.md  checklistDELETE.txt
.claude/: settings.local.json
StockSim_SubmissionPacket/: main.cpp  sweep_top100.csv
StockSim_SubmissionPacket/StockSim_SubmissionPacket/: main.cpp
StockSim_SubmissionPacket/StockSim_SubmissionPacket/include/: Stock.h  StockManager.h  TradingStrategy.h
StockSim_SubmissionPacket/StockSim_SubmissionPacket/src/: CSVParser.cpp  CircularQueue.cpp  DynamicSIPStrategy.cpp  ETF.cpp  GoldenCrossStrategy.cpp  GoldenCrossStrategy.h  Portfolio.cpp  PriceHistory.cpp  Stock.cpp  StockBST.cpp  TradingStrategy.cpp
StockSim_SubmissionPacket/include/: DynamicSIPStrategy.h  PriceNode.h
StockSim_SubmissionPacket/src/: CSVParser.cpp  DynamicSIPStrategy.cpp  FinancialAsset.cpp  MomentumStrategy.cpp  OrderQueue.cpp  Portfolio.cpp  Stock.cpp  StockBST.cpp
Trojan_Jordan_Attrino_Evan_StockSim/: CMakeLists.txt  PROMPTS.md  bonus_strategy.txt  main.cpp  sweep_top100.csv
Trojan_Jordan_Attrino_Evan_StockSim/include/: DynamicSIPStrategy.h  PriceHistory.h
Trojan_Jordan_Attrino_Evan_StockSim/src/: DynamicSIPStrategy.cpp  FixedSIPStrategy.cpp  OrderQueue.cpp  Portfolio.cpp  PriceHistory.cpp  Stock.cpp  TradeStack.cpp  TradingStrategy.cpp
